<resources>
    <string name="app_name">CrypBank</string>
    <string name="menu_home">Home</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_desconexion">Desconexion</string>
    <string name="zero_preTitle">Welcome to</string>
    <string name="zero_title">CrypBank</string>
    <string name="one_title">CrypBank</string>
    <string name="one_user">Usuario</string>
    <string name="one_password">Contraseña</string>
    <string name="one_forgot">Olvidaste tu contraseña?</string>
    <string name="one_access_button">Acceder</string>
    <string name="one_register_button">No tienes cuenta? Registrate aquí.</string>
    <string name="two_title">Registro</string>
    <string name="two_name">Nombre: </string>
    <string name="two_name_hint">Nombre</string>
    <string name="two_last_name">Apellidos: </string>
    <string name="two_last_name_hint">Apellidos</string>
    <string name="two_dni">DNI: </string>
    <string name="two_dni_hint">DNI</string>
    <string name="two_mail">E-Mail: </string>
    <string name="two_mail_hint">E-Mail</string>
    <string name="two_balance">Saldo Bancario: </string>
    <string name="two_balance_hint">Saldo Bancario</string>
    <string name="two_password">Contraseña: </string>
    <string name="two_password_hint">Contraseña</string>
    <string name="two_confirm_button">Confirmar</string>
    <string name="three_transfer_button">Transferencia</string>
    <string name="three_bank_account">Cuenta Bancaria</string>
    <string name="three_balance">Saldo: </string>
    <string name="three_balance_hint">Saldo</string>
    <string name="three_last_transfer">Últ. transferencia: </string>
    <string name="three_last_transfer_hint">Transferencia</string>
    <string name="three_last_transfer_prov">-</string>
    <string name="three_buy_button">Compra</string>
    <string name="three_crypto">Cryptomonedas</string>
    <string name="four_title">Transferencia</string>
    <string name="four_bank_account">Cuenta Bancaria: </string>
    <string name="four_bank_account_hint">Cuenta Bancaria</string>
    <string name="four_balance">Saldo cuenta: </string>
    <string name="four_balance_hint">Saldo</string>
    <string name="four_money_transfer">Dinero a transferir: </string>
    <string name="four_money_transfer_hint">Dinero</string>
    <string name="four_account_transfer">Usuario a transferir: </string>
    <string name="four_account_transfer_hint">DNI</string>
    <string name="four_beneficiary">Beneficiario: </string>
    <string name="four_beneficiary_hint">Nombre</string>
    <string name="four_transfer_button">Transferir</string>
    <string name="five_title">Criptomonedas</string>
    <string name="five_balance">Saldo cuenta: </string>
    <string name="five_balance_hint">Balance</string>
    <string name="five_crypto">Criptomoneda: </string>
    <string name="five_crypto_hint">Criptomoneda</string>
    <string name="five_price_crypto">Precio: </string>
    <string name="five_price_crypto_hint">Precio</string>
    <string name="five_transfer_quantity">Cantidad monedas: </string>
    <string name="five_transfer_quantity_hint">Cantidad</string>
    <string name="five_tranfer_money">Importe total: </string>
    <string name="five_tranfer_money_hint">Importe</string>
    <string name="five_buy_button">Comprar</string>
    <string name="six_title">Perfil</string>
    <string name="six_name">Nombre: </string>
    <string name="six_name_hint">Nombre</string>
    <string name="six_last_name">Apellidos: </string>
    <string name="six_last_name_hint">Apellidos</string>
    <string name="six_dni">DNI: </string>
    <string name="six_dni_hint">DNI</string>
    <string name="six_mail">E-Mail: </string>
    <string name="six_mail_hint">E-Mail</string>
    <string name="six_balance">Saldo: </string>
    <string name="six_balance_hint">Saldo</string>
    <string name="seven_title">Restablecer contraseña</string>
    <string name="seven_recover">Recupera tu contraseña</string>
    <string name="seven_enter">Ingresa tu e-mail</string>
    <string name="seven_recover_button">Recuperar</string>
    <string name="list_currency">eur</string>
</resources>