<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Pantalla2Registro">

    <ImageView
        android:id="@+id/headerPictureTwo"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="1dp"
        android:src="@drawable/fondo_imagin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/two_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/registerNameTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginStart="25dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/two_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTwo" />

    <EditText
        android:id="@+id/editRegisterNameTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:layout_marginStart="5dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:hint="@string/two_name_hint"
        app:layout_constraintStart_toEndOf="@+id/registerNameTwo"
        app:layout_constraintTop_toBottomOf="@+id/titleTwo" />

    <TextView
        android:id="@+id/registerLastNameTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/two_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerNameTwo" />

    <EditText
        android:id="@+id/editRegisterLastNameTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:hint="@string/two_last_name_hint"
        app:layout_constraintStart_toEndOf="@+id/registerLastNameTwo"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterNameTwo" />

    <TextView
        android:id="@+id/registerDniTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/two_dni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLastNameTwo" />

    <EditText
        android:id="@+id/editRegisterDniTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:hint="@string/two_dni_hint"
        app:layout_constraintStart_toEndOf="@+id/registerDniTwo"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterLastNameTwo" />

    <TextView
        android:id="@+id/registerEmailTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/two_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerDniTwo" />

    <EditText
        android:id="@+id/editRegisterEmailTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:hint="@string/two_mail_hint"
        app:layout_constraintStart_toEndOf="@+id/registerEmailTwo"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterDniTwo" />

    <TextView
        android:id="@+id/registerBalanceTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/two_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailTwo" />

    <EditText
        android:id="@+id/editRegisterBalanceTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:hint="@string/two_balance_hint"
        app:layout_constraintStart_toEndOf="@+id/registerBalanceTwo"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterEmailTwo" />

    <TextView
        android:id="@+id/registerPasswordTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/two_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBalanceTwo" />

    <EditText
        android:id="@+id/editRegisterPasswordTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:hint="@string/two_password_hint"
        app:layout_constraintStart_toEndOf="@+id/registerPasswordTwo"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterBalanceTwo" />

    <Button
        android:id="@+id/confirmButtonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/boton_personalizado"
        android:fontFamily="monospace"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:text="@string/two_confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>