<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Pantalla5Crypto">

    <ImageView
        android:id="@+id/headerPictureFive"
        android:layout_width="410dp"
        android:layout_height="155dp"
        android:src="@drawable/fondo_imagin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="monospace"
        android:text="@string/five_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="125dp"
        android:fontFamily="monospace"
        android:text="@string/five_wallet"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFive" />

    <EditText
        android:id="@+id/editWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="110dp"
        android:fontFamily="monospace"
        android:hint="@string/five_wallet_hint"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/wallet"
        app:layout_constraintTop_toBottomOf="@+id/titleFive" />

    <TextView
        android:id="@+id/crypto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        android:text="@string/five_crypto"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallet" />

    <EditText
        android:id="@+id/editCrypto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="monospace"
        android:hint="@string/five_crypto_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/crypto"
        app:layout_constraintTop_toBottomOf="@+id/editWallet" />

    <TextView
        android:id="@+id/transferQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        android:text="@string/five_transfer_quantity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crypto" />

    <EditText
        android:id="@+id/editTransferQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="monospace"
        android:hint="@string/five_transfer_quantity_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/transferQuantity"
        app:layout_constraintTop_toBottomOf="@+id/editCrypto" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        android:text="@string/five_tranfer_money"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transferQuantity" />

    <EditText
        android:id="@+id/editTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="monospace"
        android:hint="@string/five_tranfer_money_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/totalAmount"
        app:layout_constraintTop_toBottomOf="@+id/editTransferQuantity" />

    <Button
        android:id="@+id/confirmBuyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@drawable/boton_personalizado"
        android:fontFamily="monospace"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:text="@string/five_buy_button"
        app:layout_constraintTop_toBottomOf="@+id/totalAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationMenuFive"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded"
        app:itemIconTint="@color/color_menu"
        app:itemTextColor="@color/color_menu"
        app:menu="@menu/menu"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>