<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Pantalla7Restablecer">

    <ImageView
        android:id="@+id/headerPictureOne"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="1dp"
        android:src="@drawable/fondo_imagin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/seven_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/pictureSeven"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/crypto_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleOne" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userSeven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/seven_enter"
        app:endIconMode="clear_text"
        app:helperText="Obligatorio*"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureSeven">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUserSeven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/recoverButtonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/boton_personalizado"
        android:fontFamily="monospace"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:text="@string/seven_recover_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>